Remove horizontal scroll by fixing welcome section

--- a/css/core-style.css
+++ b/css/core-style.css
@@ -1537,7 +1537,7 @@ h2.default-description {
 }
 
 .welcome_area {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     position: relative;
     z-index: 1;
